# pygame-chess

./: .gitignore  LICENSE  PGN_recorder.py  board.py  configs.py  game.py  main.py  menu.py  menu_items.py  online_recorder.py  player.py  pyproject.toml  requirements.txt
logs/: README.md
pieces/: __init__.py  bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
