[tool.poetry]
name = "repl_python3_pygame-chess"
version = "0.1.0"
description = ""
authors = ["awenelo <<56133692+awenelo@users.noreply.github.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
